k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-react-demo
spec:
  selector:
    app: vite-react-demo
  ports:
    - name: http-traffic
      port: 80
      protocol: TCP
      targetPort: 3000
